improved awful 1 year old build system + fixed python builtin callable variables

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,12 @@
-# VS Code
+# IDEs
 .vscode/
-
-# Jetbrains
 .idea/
-node_modules/
 
 # .vsix file
 *.vsix
 
 # Build Files
-.version-getter/
-build/
-__pycache__
 package-lock.json
 
-# Other
+# Tests
 .tests/
